--- a/Config.ini
+++ b/Config.ini
@@ -1,1 +1,29 @@
-d
+[Settings]
+language = en
+logger = True
+didBackground = False
+
+[Defaults]
+webpage = Facebook
+additionalOption = 1
+theme = anaglyph
+
+[Database]
+host = localhost
+port = 5432
+username = your_db_username
+password = your_db_password
+database_name = your_database
+
+[Logging]
+log_file = app.log
+log_level = DEBUG
+
+[Features]
+enable_feature_x = True
+enable_feature_y = False
+
+[Notifications]
+email_notifications = True
+sms_notifications = False
+
